# linux_learning

./: README.md  README_sample.md  linux_notes.md  ubuntu16_env_setup_notes.md  ubuntu20_setup_notes.md  ubuntu_dl_setup.md  windows_setup.md  zotero_jianguoyun_setup.md
VSCode/: vscode_setup.md
VSCode/config_files/Huang/: settings.json
VSCode/config_files/Zhang/: .clang-format  cpp.json  settings.json
VSCode/cpp_test/: CMakeLists.txt  main.cpp  test.cpp
VSCode/ros_begining/: CMakeLists.txt  package.xml
VSCode/ros_begining/src/: talker.cpp
